fix: Restricted decimals for product units input. Added max-height and scroll of overflow for product comments list.

--- a/src/components/Product/ProductComments/ProductComments.module.scss
+++ b/src/components/Product/ProductComments/ProductComments.module.scss
@@ -1,9 +1,16 @@
 @import '@style/_media';
+@import '@style/_mixins';
 
 .list {
+  max-height: 350px;
+
   display: flex;
   flex-direction: column;
   gap: 12px;
+
+  overflow-y: auto;
+
+  @include with-scrollbar(10px);
 }
 
 .item:last-child {
@@ -69,6 +76,12 @@
 }
 
 @include tablet {
+  .list {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
   .username {
     max-width: 120px;
   }
