--- a/src/components/ui/Tabs/Tabs.module.scss
+++ b/src/components/ui/Tabs/Tabs.module.scss
@@ -47,6 +47,7 @@
 
 .active {
   position: relative;
+  pointer-events: none;
 
   &::after {
     position: absolute;
